# hexlet_pytest

./: Makefile  README.md  pyci.yml  pyproject.toml
tests/: test_example.py  test_stack.py
