[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["Yuriy Y <monkcrazy91@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
